[tool.poetry]
name = "conformal-prediction"
version = "0.1.0"
description = ""
authors = ["Ramon Medeiro <r.medeiro10@gmail.com>"]
readme = "README.md"
packages = [{include = "conformal_prediction"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.2.0"
mapie = "0.6.1"
pandas = "1.5.2"
matplotlib = "3.6.2"
wget = "^3.2"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
